--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -67,7 +67,7 @@
 </div>
 
 <div class="body">
-  <p> Notice: 16k reading model, audio will be converted. No VAD is available. </p>
+  <p> Notice: 16k reading model, audio will be converted. No VAD is available. Size limit: 20M. </p>
 </div>
 
 </body>
