--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -15,7 +15,8 @@
 <body>
 
 <div class="header">
-  <h3> ASR </h3>
+  <h3> ASR Demo </h3>
+  <h4></h4> Project see <a href="https://github.com/tz301/asr-project" target="_blank">ASR Project</a>. </h4>
 </div>
 
 <div class="header">
@@ -67,7 +68,10 @@
 </div>
 
 <div class="body">
-  <p> Notice: 16k reading model, audio will be converted. No VAD is available. Size limit: 20M. </p>
+  <p> Notice: </p>
+  <p> 1. 16k reading model, audio will be converted to 16k, mono, pcm format. </p>
+  <p> 2. No VAD is available, recognize audio with much silence may have bad result. </p>
+  <p> 3. Size limit: 20M. </p>
 </div>
 
 </body>
