--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -45,7 +45,7 @@
 </div>
 
 <div class="header">
-  <h4> Upload Wav For Asr (Developing) </h4>
+  <h4> Upload Audio For Asr </h4>
   <table>
     <tr>
       <th>
